--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 asgiref==3.4.1
+asttokens==2.4.1
 autopep8==1.6.0
+decorator==5.1.1
 dj-database-url==0.5.0
 Django==3.2.16
 django-admin-interface==0.28.5
@@ -8,13 +10,28 @@ django-colorfield==0.11.0
 django-environ==0.8.1
 django-jalali==6.0.1
 django-multiselectfield==0.1.12
+executing==2.0.1
 gunicorn==20.1.0
+ipython==8.22.1
 jdatetime==4.1.1
+jedi==0.19.1
+matplotlib-inline==0.1.6
+parso==0.8.3
+pexpect==4.9.0
 pillow==10.2.0
+prompt-toolkit==3.0.43
+ptyprocess==0.7.0
+pure-eval==0.2.2
 pycodestyle==2.8.0
+Pygments==2.17.2
+python-dateutil==2.8.2
 python-slugify==8.0.4
 pytz==2021.3
+six==1.16.0
 sqlparse==0.4.2
+stack-data==0.6.3
 text-unidecode==1.3
 toml==0.10.2
+traitlets==5.14.1
+wcwidth==0.2.13
 whitenoise==5.3.0
