--- a/.github/workflows/liara.yaml
+++ b/.github/workflows/liara.yaml
@@ -1,16 +1,31 @@
+
 name: CD-Liara
+
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+
 jobs:
-  deploy:
+  build:
+
     runs-on: ubuntu-latest
+    strategy:
+      max-parallel: 4
+      matrix:
+        python-version: [3.9, 3.10, 3.11]
 
     steps:
-      - name: update-liara
-        env:
-          LIARA_TOKEN: ${{ secrets.LIARA_API_TOKEN }}
-        run: |
-          npm i -g @liara/cli@5
-          liara deploy --app="hesam1" --api-token="$LIARA_TOKEN" --no-app-logs
+    - uses: actions/checkout@v3
+    - name: Install Dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
+    - name: update-liara
+      env:
+        LIARA_TOKEN: ${{ secrets.LIARA_API_TOKEN }}
+      run: |
+        npm i -g @liara/cli@5
+        liara deploy --app="hesam1" --api-token="$LIARA_TOKEN" --no-app-logs
