--- a/.github/workflows/liara.yaml
+++ b/.github/workflows/liara.yaml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.9, 3.10, 3.11]
+        python-version: [3.11]
 
     steps:
     - uses: actions/checkout@v3
@@ -29,3 +29,9 @@ jobs:
       run: |
         npm i -g @liara/cli@5
         liara deploy --app="hesam1" --api-token="$LIARA_TOKEN" --no-app-logs
+
+    - name: Run your script
+        run: | 
+          python3 manage.py makemigrations 
+          python3 manage.py migrate
+
