--- a/.github/workflows/liara.yaml
+++ b/.github/workflows/liara.yaml
@@ -30,7 +30,7 @@ jobs:
         npm i -g @liara/cli@5
         liara deploy --app="hesam1" --api-token="$LIARA_TOKEN" --no-app-logs
 
-    - name: Run your script
+    - name: Migrations
       run: | 
         python3 manage.py makemigrations 
         python3 manage.py migrate
