--- a/.github/workflows/liara.yaml
+++ b/.github/workflows/liara.yaml
@@ -35,4 +35,6 @@ jobs:
         python3 manage.py makemigrations 
         python3 manage.py migrate
         python3 manage.py collectstatic --noinput
+        cp -a dbdisk/bower_components staticfiles/assets/
+
 
