--- a/requirements.txt
+++ b/requirements.txt
@@ -35,3 +35,423 @@ toml==0.10.2
 traitlets==5.14.1
 wcwidth==0.2.13
 whitenoise==5.3.0
+amqp==5.2.0
+annotated-types==0.7.0
+anyio==4.4.0
+arrow==1.3.0
+asgiref==3.4.1
+asttokens==2.4.1
+autopep8==1.6.0
+billiard==4.2.0
+binaryornot==0.4.4
+celery==5.4.0
+certifi==2024.6.2
+chardet==5.2.0
+charset-normalizer==3.3.2
+click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+cookiecutter==2.6.0
+cron-descriptor==1.4.3
+decorator==5.1.1
+dj-database-url==0.5.0
+Django==3.2.16
+django-admin-interface==0.28.5
+django-autocomplete-light==3.11.0
+django-celery-beat==2.6.0
+django-colorfield==0.11.0
+django-environ==0.8.1
+django-jalali==6.0.1
+django-multiselectfield==0.1.12
+django-timezone-field==7.0
+dnspython==2.6.1
+email_validator==2.2.0
+executing==2.0.1
+fastapi==0.111.0
+fastapi-cli==0.0.4
+flet==0.23.1
+flet-core==0.23.1
+flet-runtime==0.23.1
+gunicorn==20.1.0
+h11==0.14.0
+httpcore==1.0.5
+httptools==0.6.1
+httpx==0.27.0
+idna==3.7
+ipython==8.22.1
+jdatetime==4.1.1
+jedi==0.19.1
+Jinja2==3.1.4
+kombu==5.3.7
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+oauthlib==3.2.2
+orjson==3.10.5
+packaging==23.2
+parso==0.8.3
+pexpect==4.9.0
+pillow==10.2.0
+prompt-toolkit==3.0.43
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pycodestyle==2.8.0
+pydantic==2.7.4
+pydantic_core==2.18.4
+Pygments==2.17.2
+pypng==0.20220715.0
+python-crontab==3.2.0
+python-dateutil==2.8.2
+python-dotenv==1.0.1
+python-multipart==0.0.9
+python-slugify==8.0.4
+pytz==2021.3
+PyYAML==6.0.1
+qrcode==7.4.2
+repath==0.9.0
+requests==2.32.3
+rich==13.7.1
+shellingham==1.5.4
+six==1.16.0
+sniffio==1.3.1
+sqlparse==0.4.2
+stack-data==0.6.3
+starlette==0.37.2
+text-unidecode==1.3
+toml==0.10.2
+traitlets==5.14.1
+typer==0.12.3
+types-python-dateutil==2.9.0.20240316
+typing_extensions==4.12.2
+tzdata==2024.1
+ujson==5.10.0
+urllib3==2.2.2
+uvicorn==0.30.1
+uvloop==0.19.0
+vine==5.1.0
+watchdog==4.0.1
+watchfiles==0.22.0
+wcwidth==0.2.13
+websockets==12.0
+whitenoise==5.3.0
+amqp==5.2.0
+annotated-types==0.7.0
+anyio==4.4.0
+arrow==1.3.0
+asgiref==3.4.1
+asttokens==2.4.1
+autopep8==1.6.0
+billiard==4.2.0
+binaryornot==0.4.4
+celery==5.4.0
+certifi==2024.6.2
+chardet==5.2.0
+charset-normalizer==3.3.2
+click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+cookiecutter==2.6.0
+cron-descriptor==1.4.3
+decorator==5.1.1
+dj-database-url==0.5.0
+Django==3.2.16
+django-admin-interface==0.28.5
+django-autocomplete-light==3.11.0
+django-colorfield==0.11.0
+django-environ==0.8.1
+django-jalali==6.0.1
+django-multiselectfield==0.1.12
+django-timezone-field==7.0
+dnspython==2.6.1
+email_validator==2.2.0
+executing==2.0.1
+fastapi==0.111.0
+fastapi-cli==0.0.4
+flet==0.23.1
+flet-core==0.23.1
+flet-runtime==0.23.1
+gunicorn==20.1.0
+h11==0.14.0
+httpcore==1.0.5
+httptools==0.6.1
+httpx==0.27.0
+idna==3.7
+ipython==8.22.1
+jdatetime==4.1.1
+jedi==0.19.1
+Jinja2==3.1.4
+kombu==5.3.7
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+oauthlib==3.2.2
+orjson==3.10.5
+packaging==23.2
+parso==0.8.3
+pexpect==4.9.0
+pillow==10.2.0
+prompt-toolkit==3.0.43
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pycodestyle==2.8.0
+pydantic==2.7.4
+pydantic_core==2.18.4
+Pygments==2.17.2
+pypng==0.20220715.0
+python-crontab==3.2.0
+python-dateutil==2.8.2
+python-dotenv==1.0.1
+python-multipart==0.0.9
+python-slugify==8.0.4
+pytz==2021.3
+PyYAML==6.0.1
+qrcode==7.4.2
+repath==0.9.0
+requests==2.32.3
+rich==13.7.1
+shellingham==1.5.4
+six==1.16.0
+sniffio==1.3.1
+sqlparse==0.4.2
+stack-data==0.6.3
+starlette==0.37.2
+text-unidecode==1.3
+toml==0.10.2
+traitlets==5.14.1
+typer==0.12.3
+types-python-dateutil==2.9.0.20240316
+typing_extensions==4.12.2
+tzdata==2024.1
+ujson==5.10.0
+urllib3==2.2.2
+uvicorn==0.30.1
+uvloop==0.19.0
+vine==5.1.0
+watchdog==4.0.1
+watchfiles==0.22.0
+wcwidth==0.2.13
+websockets==12.0
+whitenoise==5.3.0
+amqp==5.2.0
+annotated-types==0.7.0
+anyio==4.4.0
+arrow==1.3.0
+asgiref==3.4.1
+asttokens==2.4.1
+attrs==23.2.0
+autopep8==1.6.0
+billiard==4.2.0
+binaryornot==0.4.4
+celery==5.4.0
+certifi==2024.6.2
+chardet==5.2.0
+charset-normalizer==3.3.2
+click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+cookiecutter==2.6.0
+cron-descriptor==1.4.3
+decorator==5.1.1
+dj-database-url==0.5.0
+Django==3.2.16
+django-admin-interface==0.28.5
+django-autocomplete-light==3.11.0
+django-colorfield==0.11.0
+django-environ==0.8.1
+django-jalali==6.0.1
+django-multiselectfield==0.1.12
+django-timezone-field==7.0
+dnspython==2.6.1
+email_validator==2.2.0
+executing==2.0.1
+fastapi==0.111.0
+fastapi-cli==0.0.4
+flet==0.23.1
+flet-core==0.23.1
+flet-runtime==0.23.1
+gunicorn==20.1.0
+h11==0.14.0
+httpcore==1.0.5
+httptools==0.6.1
+httpx==0.27.0
+idna==3.7
+ipython==8.22.1
+isodate==0.6.1
+jdatetime==4.1.1
+jedi==0.19.1
+Jinja2==3.1.4
+kombu==5.3.7
+lxml==5.2.2
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+oauthlib==3.2.2
+orjson==3.10.5
+packaging==23.2
+parso==0.8.3
+pexpect==4.9.0
+pillow==10.2.0
+platformdirs==4.2.2
+prompt-toolkit==3.0.43
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pycodestyle==2.8.0
+pydantic==2.7.4
+pydantic_core==2.18.4
+Pygments==2.17.2
+pypng==0.20220715.0
+python-crontab==3.2.0
+python-dateutil==2.8.2
+python-dotenv==1.0.1
+python-multipart==0.0.9
+python-slugify==8.0.4
+pytz==2021.3
+PyYAML==6.0.1
+qrcode==7.4.2
+repath==0.9.0
+requests==2.32.3
+requests-file==2.1.0
+requests-toolbelt==1.0.0
+rich==13.7.1
+shellingham==1.5.4
+six==1.16.0
+sniffio==1.3.1
+sqlparse==0.4.2
+stack-data==0.6.3
+starlette==0.37.2
+text-unidecode==1.3
+toml==0.10.2
+traitlets==5.14.1
+typer==0.12.3
+types-python-dateutil==2.9.0.20240316
+typing_extensions==4.12.2
+tzdata==2024.1
+ujson==5.10.0
+urllib3==2.2.2
+uvicorn==0.30.1
+uvloop==0.19.0
+vine==5.1.0
+watchdog==4.0.1
+watchfiles==0.22.0
+wcwidth==0.2.13
+websockets==12.0
+whitenoise==5.3.0
+zeep==4.2.1
+aiohttp==3.9.5
+aiosignal==1.3.1
+amqp==5.2.0
+annotated-types==0.7.0
+anyio==4.4.0
+arrow==1.3.0
+asgiref==3.4.1
+asttokens==2.4.1
+attrs==23.2.0
+autopep8==1.6.0
+billiard==4.2.0
+binaryornot==0.4.4
+celery==5.4.0
+certifi==2024.6.2
+chardet==5.2.0
+charset-normalizer==3.3.2
+click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+cookiecutter==2.6.0
+cron-descriptor==1.4.3
+decorator==5.1.1
+dj-database-url==0.5.0
+Django==3.2.16
+django-admin-interface==0.28.5
+django-autocomplete-light==3.11.0
+django-colorfield==0.11.0
+django-environ==0.8.1
+django-jalali==6.0.1
+django-multiselectfield==0.1.12
+django-timezone-field==7.0
+dnspython==2.6.1
+email_validator==2.2.0
+executing==2.0.1
+fastapi==0.111.0
+fastapi-cli==0.0.4
+flet==0.23.1
+flet-core==0.23.1
+flet-runtime==0.23.1
+frozenlist==1.4.1
+gunicorn==20.1.0
+h11==0.14.0
+httpcore==1.0.5
+httptools==0.6.1
+httpx==0.27.0
+idna==3.7
+ipython==8.22.1
+isodate==0.6.1
+jdatetime==4.1.1
+jedi==0.19.1
+Jinja2==3.1.4
+kombu==5.3.7
+lxml==5.2.2
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+multidict==6.0.5
+oauthlib==3.2.2
+orjson==3.10.5
+packaging==23.2
+parso==0.8.3
+pexpect==4.9.0
+pillow==10.2.0
+platformdirs==4.2.2
+prompt-toolkit==3.0.43
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pycodestyle==2.8.0
+pydantic==2.7.4
+pydantic_core==2.18.4
+Pygments==2.17.2
+pypng==0.20220715.0
+python-crontab==3.2.0
+python-dateutil==2.8.2
+python-dotenv==1.0.1
+python-multipart==0.0.9
+python-slugify==8.0.4
+pytz==2021.3
+PyYAML==6.0.1
+qrcode==7.4.2
+repath==0.9.0
+requests==2.32.3
+requests-file==2.1.0
+requests-toolbelt==1.0.0
+rich==13.7.1
+shellingham==1.5.4
+six==1.16.0
+sniffio==1.3.1
+sqlparse==0.4.2
+stack-data==0.6.3
+starlette==0.37.2
+text-unidecode==1.3
+toml==0.10.2
+traitlets==5.14.1
+typer==0.12.3
+types-python-dateutil==2.9.0.20240316
+typing_extensions==4.12.2
+tzdata==2024.1
+ujson==5.10.0
+urllib3==2.2.2
+uvicorn==0.30.1
+uvloop==0.19.0
+vine==5.1.0
+watchdog==4.0.1
+watchfiles==0.22.0
+wcwidth==0.2.13
+websockets==12.0
+whitenoise==5.3.0
+yarl==1.9.4
+zeep==4.2.1
